; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/shell32/extr_shlfolder.c_get_empty_cddrive.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/shell32/extr_shlfolder.c_get_empty_cddrive.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@get_empty_cddrive.cdrom_drive = internal global [4 x i8] c"A:\\\00", align 1
@DRIVE_CDROM = common dso_local global i64 0, align 8
@INVALID_FILE_ATTRIBUTES = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* ()* @get_empty_cddrive to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_empty_cddrive() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i32, align 4
  %3 = call i32 (...) @GetLogicalDrives()
  store i32 %3, i32* %2, align 4
  store i8 65, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @get_empty_cddrive.cdrom_drive, i64 0, i64 0), align 1
  br label %4

4:                                                ; preds = %20, %0
  %5 = load i32, i32* %2, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %25

7:                                                ; preds = %4
  %8 = load i32, i32* %2, align 4
  %9 = and i32 %8, 1
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %20

11:                                               ; preds = %7
  %12 = call i64 @GetDriveTypeW(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @get_empty_cddrive.cdrom_drive, i64 0, i64 0))
  %13 = load i64, i64* @DRIVE_CDROM, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %20

15:                                               ; preds = %11
  %16 = call i64 @GetFileAttributesW(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @get_empty_cddrive.cdrom_drive, i64 0, i64 0))
  %17 = load i64, i64* @INVALID_FILE_ATTRIBUTES, align 8
  %18 = icmp eq i64 %16, %17
  br i1 %18, label %19, label %20

19:                                               ; preds = %15
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @get_empty_cddrive.cdrom_drive, i64 0, i64 0), i8** %1, align 8
  br label %26

20:                                               ; preds = %15, %11, %7
  %21 = load i32, i32* %2, align 4
  %22 = ashr i32 %21, 1
  store i32 %22, i32* %2, align 4
  %23 = load i8, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @get_empty_cddrive.cdrom_drive, i64 0, i64 0), align 1
  %24 = add i8 %23, 1
  store i8 %24, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @get_empty_cddrive.cdrom_drive, i64 0, i64 0), align 1
  br label %4

25:                                               ; preds = %4
  store i8* null, i8** %1, align 8
  br label %26

26:                                               ; preds = %25, %19
  %27 = load i8*, i8** %1, align 8
  ret i8* %27
}

declare dso_local i32 @GetLogicalDrives(...) #1

declare dso_local i64 @GetDriveTypeW(i8*) #1

declare dso_local i64 @GetFileAttributesW(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
